   merged into one enum; the order of keybindings is now just the
   order they are added to each group. Keybindings can be reordered
   without breaking the plugin ABI but groups must stay the same.
 * src/stash.c:
   Fix writing the default value when a key is missing for hidden
   prefs, even if it was overridden when it was originally read.


2010-08-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c, src/ui_utils.h:
   Make ui_label_new_bold() a function.
   Escape the name of the current document for markup when using
   document name for menu items (closes #3038844).
 * src/vte.c:
   Inherit 'beep on errors' preference for the audible bell preference
   for the VTE (closes #3038215).


2010-08-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c, src/utils.h:
   Add utils_get_eol_char().
 * plugins/geanyfunctions.h, src/document.c, src/editor.c, src/editor.h,
   src/plugindata.h, src/plugins.c, src/templates.c, src/utils.c,
   src/utils.h:
   Ensure inserted templates always have proper line ending characters
   according to the current document's preference.
   This is also fixes problems with templates on Windows which had
   always Unix line ending characters but now since they are read
   from files, these have Windows line ending characters and had been
   converted twice.


2010-07-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/vte.c:
   Fix build with GTK 2.8, use the stock icon name directly instead
   of the macro. Though, the icon is still missing for GTK 2.8.
 * src/templates.c:
   Make make_comment_block() work with a GString. This is not yet
   perfect but a bit better than before.


2010-07-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.c, src/vte.c, src/vte.h:
   Implement 'Select All' for the VTE widget.


2010-07-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.nsi:
   Fix missing template files in the Windows installer.

