@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-07-08" />
+<meta name="date" content="2010-07-09" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-07-08</td></tr>
+<td>2010-07-09</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -4693,6 +4693,12 @@ keybinding <tt class="docutils literal"><span class="pre">Complete</span> <span 
 <tt class="docutils literal"><span class="pre">Space</span></tt>.</td>
 <td>false</td>
 </tr>
+<tr><td>show_editor_scrollbars</td>
+<td>Whether to display scrollbars. If set to
+false, the horizontal and vertical
+scrollbars are hidden completely.</td>
+<td>true</td>
+</tr>
 <tr><td><strong>Interface related</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -4712,12 +4718,6 @@ setting this option to true, the Save
 buttons and menu items are always active
 and files can be saved.</td>
 <td>false</td>
-</tr>
-<tr><td>show_editor_scrollbars</td>
-<td>Whether to display scrollbars. If set to
-false, the horizontal and vertical
-scrollbars are hidden completely.</td>
-<td>true</td>
 </tr>
 <tr><td>compiler_tab_autoscroll</td>
 <td>Whether to automatically scroll to the
@@ -6143,7 +6143,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-07-09 12:18 UTC.
+Generated on: 2010-07-09 15:38 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
